--- a/assignments/1. hello-world/internal/index.html
+++ b/assignments/1. hello-world/internal/index.html
@@ -6,5 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Internal</title>
   </head>
-  <body></body>
+  <body>
+    <script>
+      var name = prompt("Enter You Name", "Anshu");
+      alert("'Good Morning " + name + "'");
+    </script>
+  </body>
 </html>
